apps/base/prometheus/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    toolkit.fluxcd.io/tenant: monitoring
