apps/base/prometheus/virtualservices.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - prometheus.k8s
  gateways:
  - istio-ingress/k8s-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: prometheus-stack-kube-prom-prometheus.prometheus.svc.cluster.local
        port:
          number: 9090
